@@ -1,4 +1,9 @@
 Revision history for Perl extension MojoX-Dispatcher-Qooxdoo-Jsonrpc:
+        
+        Sat Mar 26 2011
+        - new module Mojolicious::Plugin::QooxdooJsonrpc makes writing
+          applications even simpler. Included support for serving
+          both the production and the source version of the application
 
         Tue Mar 22 2011
         - add utf8 to content_type
